--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang='en'>
   <head>
 
-    <title>Random English Words</title>
     <meta charset='utf-8'/>
+    <title>xkcd-style password generator</title>
 
     <!-- BEGIN 3rd Party Bootstrap inclusions -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -28,7 +28,16 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- END more Boostratp inclusions -->
 
-    <h1>Random English Words</h1>
+    <h1>An xkcd-style Password Generator</h1>
+
+    <p>An <a href="http://www.xkcd.com/936">xkcd style password</a> is a password which consists of several easy-to-remember words, rather than the traditional shorter, complex series of letters, numbers, and special characters:</p>
+
+    <img src="http://imgs.xkcd.com/comics/password_strength.png" alt="xkcd password cartoon"/>
+
+    <p>This page allows you to generate xkcd style passwords. You can specify how many common words to use for the password, as well as options for inserting a random special character, a randomly placed number (0-9), and to randomly capitalize one of the letters.</p>
+
+    <p>The words are based on a list of several thousand of the most commonly used words in the english language.</p> 
+
     <form action="generate_password.php" method="post">
       <p>Number of words: <input type="number" name="numWords" min="1" value="4"/></p>
       <p><input type="checkbox" name="insertNum" value="insertNum">Insert a number?</p>
