--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>xkcd-style password generator</title>
 
     <!-- BEGIN 3rd Party Bootstrap inclusions -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<!--    <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <!--[if lt IE 9]>
